// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`babel plugin core autoworkletization workletizes useAnimatedStyle callback 1`] = `
"import { useAnimatedStyle } from 'react-native-reanimated';
function Box() {
  const style = useAnimatedStyle(require("react-native-worklets/.worklets/16304373026183.js").default({}));
}"
`;

exports[`babel plugin core autoworkletization workletizes useAnimatedStyle callback 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function () {
    return {
      width: 100
    };
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 16304373026183;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core closure handling captures locally bound variables shadowing globals 1`] = `
"export default (function f_testJs1Factory({
  console
}) {
  const f = function () {
    console.log(console);
  };
  f.__closure = {
    console
  };
  f.__workletHash = 16880126594815;
  f.__pluginVersion = "x.y.z";
  return f;
});"
`;

exports[`babel plugin core closure handling captures multiple closure variables 1`] = `
"export default (function foo_testJs1Factory({
  a,
  b
}) {
  const foo = function () {
    return a + b;
  };
  foo.__closure = {
    a,
    b
  };
  foo.__workletHash = 13996627615150;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core closure handling does not capture default globals 1`] = `
"export default (function f_testJs1Factory({}) {
  const f = function () {
    console.log('hi');
    return Math.random();
  };
  f.__closure = {};
  f.__workletHash = 861694609719;
  f.__pluginVersion = "x.y.z";
  return f;
});"
`;

exports[`babel plugin core without worklets leaves code untouched and emits no factory 1`] = `
"function foo() {
  var x = 1;
}"
`;

exports[`babel plugin core worklet shapes workletizes ArrowFunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/1844848981365.js").default({});"`;

exports[`babel plugin core worklet shapes workletizes ArrowFunctionExpression 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 1844848981365;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;

exports[`babel plugin core worklet shapes workletizes FunctionDeclaration 1`] = `"const foo = require("react-native-worklets/.worklets/309188718540.js").default({});"`;

exports[`babel plugin core worklet shapes workletizes FunctionDeclaration 2`] = `
"export default (function foo_testJs1Factory({}) {
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 309188718540;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core worklet shapes workletizes ObjectMethod 1`] = `
"const foo = {
  bar: require("react-native-worklets/.worklets/3278862305819.js").default({})
};"
`;

exports[`babel plugin core worklet shapes workletizes ObjectMethod 2`] = `
"export default (function bar_testJs1Factory({}) {
  const bar = function (x) {
    return x + 2;
  };
  bar.__closure = {};
  bar.__workletHash = 3278862305819;
  bar.__pluginVersion = "x.y.z";
  return bar;
});"
`;

exports[`babel plugin core worklet shapes workletizes named FunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/309188718540.js").default({});"`;

exports[`babel plugin core worklet shapes workletizes named FunctionExpression 2`] = `
"export default (function foo_testJs1Factory({}) {
  const foo = function (x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 309188718540;
  foo.__pluginVersion = "x.y.z";
  return foo;
});"
`;

exports[`babel plugin core worklet shapes workletizes unnamed FunctionExpression 1`] = `"const foo = require("react-native-worklets/.worklets/1844848981365.js").default({});"`;

exports[`babel plugin core worklet shapes workletizes unnamed FunctionExpression 2`] = `
"export default (function testJs1Factory({}) {
  const testJs1 = function (x) {
    return x + 2;
  };
  testJs1.__closure = {};
  testJs1.__workletHash = 1844848981365;
  testJs1.__pluginVersion = "x.y.z";
  return testJs1;
});"
`;
